# Cosmic_Fate_Simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_download_raw_data.ipynb
notebooks/data_collection/: 01_web_scraping_astronomy_data.ipynb  02_api_data_fetching.ipynb
notebooks/data_preprocessing/: 00_data_cleaning.ipynb  01_data_transformation.ipynb
scripts/: generate_cosmology_data.py  generate_monte_carlo_times.py  generate_vacuum_decay.py
src/data/: generate_galaxy_distances.py  generate_scale_factor_evolution.py  process_data.py
