[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmic-fate-simulator"
version = "0.1.0"
description = "A data science project simulating potential cosmic fates of the Universe"
authors = [
    {name = "Jobet P. Casquejo", email = "jobetcasquejo221@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "plotly>=5.11.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.9.0",
    "dash-bootstrap-components>=1.4.0",
    "streamlit>=1.20.0",
]

dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=6.1.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/jobet1130/Cosmic_Fate_Simulator"
Documentation = "https://cosmic-fate-simulator.readthedocs.io/"
Issues = "https://github.com/jobet1130/Cosmic_Fate_Simulator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E", "F", "W",  # Default flake8
    "I",            # isort
    "UP",           # pyupgrade
    "N",            # pep8-naming
    "PL",           # pylint
]
ignore = [
    "E501",  # Line too long (handled by black)
    "W503",  # Line break occurred before a binary operator
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
